# Vial

./: Cargo.toml  LICENSE  README.md  diesel.toml  dist-workspace.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: crypto.rs
server/: Cargo.toml  README.md
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
srv-lib/: Cargo.toml  README.md
srv-lib/src/: errors.rs  lib.rs  schema.rs
srv-lib/src/db/: conn.rs  mod.rs  models.rs
srv-lib/src/migrations/2026-01-13-134255-0000_initial/: up.sql
vial-shared/: Cargo.toml
vial-shared/src/: lib.rs
