[workspace]
members = ["cli", "server", "srv-lib", "core", "shared"]

resolver = "2"

[workspace.dependencies]
vial-core = "0.1.0"
vial-srv = "0.1.0"
vial-shared = "0.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
