[package]
name = "vial-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vial"
path = "src/main.rs"

[dependencies]
vial-core.workspace = true
vial-shared.workspace = true
chrono.workspace = true
serde.workspace = true

reqwest = { version = "0.13.1", features = ["json", "blocking"] }
clap = { version = "4.5.54", features = ["derive"] }
base64 = "0.22.1"
rpassword = "7.4.0"
