[package]
name = "vial-cli"
version = "0.1.0"
edition = "2024"
authors = ["TheRustyPickle <rusty.pickle94@gmail.com>"]
readme = "../README.md"
description = """
CLI for creating and retrieving end-to-end encrypted secrets
"""
homepage = "https://github.com/TheRustyPickle/Vial"
repository = "https://github.com/TheRustyPickle/Vial"
license = "MIT"
keywords = ["cli", "e2e", "secret", "vault", "secure"]
categories = ["command-line-utilities"]

[[bin]]
name = "vial"
path = "src/main.rs"

[dependencies]
vial-core.workspace = true
vial-shared.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

dirs = "6.0.0"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
clap = { version = "4.5.54", features = ["derive"] }
base64 = "0.22.1"
rpassword = "7.4.0"
