[package]
name = "vial-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chacha20poly1305 = "0.10.1"
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }
aead = "0.5.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = "0.9"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
